// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateUserUseCase should create a user with profile and banner 1`] = `
{
  "bio": "bio",
  "id": "1",
  "name": "John Doe",
  "profileImg": "https://example.com/profile-picture.jpg",
  "username": "johndoe",
}
`;

exports[`CreateUserUseCase should create a user without profile and banner 1`] = `
{
  "bio": "bio",
  "id": "1",
  "name": "John Doe",
  "profileImg": null,
  "username": "johndoe",
}
`;
